[package]
name = "rust-laravel-tips-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1"
async-trait = "0.1.68"
base64 = "0.21.0"
bat = "0.23.0"
console = "0.15.5"
futures = "0.3.28"
home = "0.5.5"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }


[[bin]]
name = "laraveltips"
path = "src/main.rs"

